src/unified-compiler/internal/parser/unified_parser.go
// Code generated from UnifiedParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // UnifiedParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type UnifiedParser struct {
	*antlr.BaseParser
}

var UnifiedParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func unifiedparserParserInit() {
	staticData := &UnifiedParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "':'", "','", "'.'",
		"'->'", "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'",
		"'~'", "'<<'", "'>>'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'",
		"'>'", "'<='", "'>='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='",
		"'<<='", "'>>='", "'&='", "'^='", "'|='", "'?'", "'?.'", "'..'", "'..='",
		"'++'", "'--'", "'_'", "", "'import'", "'as'", "'fn'", "'struct'", "'enum'",
		"'interface'", "'impl'", "'actor'", "'type'", "'refine'", "'const'",
		"'let'", "'var'", "'mut'", "'pub'", "", "'if'", "'else'", "'loop'",
		"'while'", "'for'", "'in'", "'break'", "'continue'", "'return'", "'switch'",
		"'case'", "'where'", "'move'", "'await'", "'async'", "'try'", "'region'",
	}
	staticData.SymbolicNames = []string{
		"", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "SEMI",
		"COLON", "COMMA", "DOT", "ARROW", "DOUBLE_COLON", "PLUS", "MINUS", "STAR",
		"DIV", "MOD", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "LSHIFT", "RSHIFT",
		"AND", "OR", "NOT", "EQ", "NE", "LT", "GT", "LE", "GE", "ASSIGN", "PLUS_ASSIGN",
		"MINUS_ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN",
		"RSHIFT_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", "OR_ASSIGN", "QUESTION",
		"NULL_COND", "RANGE", "RANGE_INCL", "INC", "DEC", "UNDERSCORE", "MODULE",
		"IMPORT", "AS", "FN", "STRUCT", "ENUM", "INTERFACE", "IMPL", "ACTOR",
		"TYPE", "REFINE", "CONST", "LET", "VAR", "MUT", "PUB", "SELF", "IF",
		"ELSE", "LOOP", "WHILE", "FOR", "IN", "BREAK", "CONTINUE", "RETURN",
		"SWITCH", "CASE", "WHERE", "MOVE", "AWAIT", "ASYNC", "TRY", "REGION",
		"Identifier", "IntLiteral", "FloatLiteral", "StringLiteral", "CharLiteral",
		"BoolLiteral", "NullLiteral", "EscapeSequence", "WS", "COMMENT", "MULTILINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "item", "moduleDecl", "importDecl", "importPath", "importList",
		"functionDecl", "paramList", "parameter", "genericParams", "genericParam",
		"typeConstraint", "whereClause", "whereConstraint", "structDecl", "structMember",
		"enumDecl", "enumVariant", "enumVariantParams", "enumVariantParam",
		"interfaceDecl", "interfaceMember", "functionSig", "implDecl", "implMember",
		"actorDecl", "actorMember", "typeAlias", "constantDecl", "type", "typeList",
		"statement", "letStatement", "varStatement", "regionStatement", "exprStatement",
		"returnStatement", "ifStatement", "loopStatement", "whileStatement",
		"forStatement", "switchStatement", "caseClause", "breakStatement", "continueStatement",
		"blockStatement", "tryStatement", "pattern", "patternList", "fieldPattern",
		"fieldPatternList", "expr", "caseExpr", "primary", "lambdaExpr", "asyncExpr",
		"structExpr", "fieldInitList", "fieldInit", "listExpr", "mapExpr", "keyValue",
		"setExpr", "tupleExpr", "block", "argList", "literal", "identifier",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// UnifiedParserInit initializes any static state used to implement UnifiedParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewUnifiedParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func UnifiedParserInit() {
	staticData := &UnifiedParserParserStaticData
	staticData.once.Do(unifiedparserParserInit)
}

// NewUnifiedParser produces a new parser instance for the optional input antlr.TokenStream.
func NewUnifiedParser(input antlr.TokenStream) *UnifiedParser {
	UnifiedParserInit()
	this := new(UnifiedParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &UnifiedParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "UnifiedParser.g4"

	return this
}

// UnifiedParser tokens.
const (
	UnifiedParserEOF               = antlr.TokenEOF
	UnifiedParserLBRACE            = 1
	UnifiedParserRBRACE            = 2
	UnifiedParserLPAREN            = 3
	UnifiedParserRPAREN            = 4
	UnifiedParserLBRACK            = 5
	UnifiedParserRBRACK            = 6
	UnifiedParserSEMI              = 7
	UnifiedParserCOLON             = 8
	UnifiedParserCOMMA             = 9
	UnifiedParserDOT               = 10
	UnifiedParserARROW             = 11
	UnifiedParserDOUBLE_COLON      = 12
	UnifiedParserPLUS              = 13
	UnifiedParserMINUS             = 14
	UnifiedParserSTAR              = 15
	UnifiedParserDIV               = 16
	UnifiedParserMOD               = 17
	UnifiedParserBIT_AND           = 18
	UnifiedParserBIT_OR            = 19
	UnifiedParserBIT_XOR           = 20
	UnifiedParserBIT_NOT           = 21
	UnifiedParserLSHIFT            = 22
	UnifiedParserRSHIFT            = 23
	UnifiedParserAND               = 24
	UnifiedParserOR                = 25
	UnifiedParserNOT               = 26
	UnifiedParserEQ                = 27
	UnifiedParserNE                = 28
	UnifiedParserLT                = 29
	UnifiedParserGT                = 30
	UnifiedParserLE                = 31
	UnifiedParserGE                = 32
	UnifiedParserASSIGN            = 33
	UnifiedParserPLUS_ASSIGN       = 34
	UnifiedParserMINUS_ASSIGN      = 35
	UnifiedParserSTAR_ASSIGN       = 36
	UnifiedParserDIV_ASSIGN        = 37
	UnifiedParserMOD_ASSIGN        = 38
	UnifiedParserLSHIFT_ASSIGN     = 39
	UnifiedParserRSHIFT_ASSIGN     = 40
	UnifiedParserAND_ASSIGN        = 41
	UnifiedParserXOR_ASSIGN        = 42
	UnifiedParserOR_ASSIGN         = 43
	UnifiedParserQUESTION          = 44
	UnifiedParserNULL_COND         = 45
	UnifiedParserRANGE             = 46
	UnifiedParserRANGE_INCL        = 47
	UnifiedParserINC               = 48
	UnifiedParserDEC               = 49
	UnifiedParserUNDERSCORE        = 50
	UnifiedParserMODULE            = 51
	UnifiedParserIMPORT            = 52
	UnifiedParserAS                = 53
	UnifiedParserFN                = 54
	UnifiedParserSTRUCT            = 55
	UnifiedParserENUM              = 56
	UnifiedParserINTERFACE         = 57
	UnifiedParserIMPL              = 58
	UnifiedParserACTOR             = 59
	UnifiedParserTYPE              = 60
	UnifiedParserREFINE            = 61
	UnifiedParserCONST             = 62
	UnifiedParserLET               = 63
	UnifiedParserVAR               = 64
	UnifiedParserMUT               = 65
	UnifiedParserPUB               = 66
	UnifiedParserSELF              = 67
	UnifiedParserIF                = 68
	UnifiedParserELSE              = 69
	UnifiedParserLOOP              = 70
	UnifiedParserWHILE             = 71
	UnifiedParserFOR               = 72
	UnifiedParserIN                = 73
	UnifiedParserBREAK             = 74
	UnifiedParserCONTINUE          = 75
	UnifiedParserRETURN            = 76
	UnifiedParserSWITCH            = 77
	UnifiedParserCASE              = 78
	UnifiedParserWHERE             = 79
	UnifiedParserMOVE              = 80
	UnifiedParserAWAIT             = 81
	UnifiedParserASYNC             = 82
	UnifiedParserTRY               = 83
	UnifiedParserREGION            = 84
	UnifiedParserIdentifier        = 85
	UnifiedParserIntLiteral        = 86
	UnifiedParserFloatLiteral      = 87
	UnifiedParserStringLiteral     = 88
	UnifiedParserCharLiteral       = 89
	UnifiedParserBoolLiteral       = 90
	UnifiedParserNullLiteral       = 91
	UnifiedParserEscapeSequence    = 92
	UnifiedParserWS                = 93
	UnifiedParserCOMMENT           = 94
	UnifiedParserMULTILINE_COMMENT = 95
)

// UnifiedParser rules.
const (
	UnifiedParserRULE_program           = 0
	UnifiedParserRULE_item              = 1
	UnifiedParserRULE_moduleDecl        = 2
	UnifiedParserRULE_importDecl        = 3
	UnifiedParserRULE_importPath        = 4
	UnifiedParserRULE_importList        = 5
	UnifiedParserRULE_functionDecl      = 6
	UnifiedParserRULE_paramList         = 7
	UnifiedParserRULE_parameter         = 8
	UnifiedParserRULE_genericParams     = 9
	UnifiedParserRULE_genericParam      = 10
	UnifiedParserRULE_typeConstraint    = 11
	UnifiedParserRULE_whereClause       = 12
	UnifiedParserRULE_whereConstraint   = 13
	UnifiedParserRULE_structDecl        = 14
	UnifiedParserRULE_structMember      = 15
	UnifiedParserRULE_enumDecl          = 16
	UnifiedParserRULE_enumVariant       = 17
	UnifiedParserRULE_enumVariantParams = 18
	UnifiedParserRULE_enumVariantParam  = 19
	UnifiedParserRULE_interfaceDecl     = 20
	UnifiedParserRULE_interfaceMember   = 21
	UnifiedParserRULE_functionSig       = 22
	UnifiedParserRULE_implDecl          = 23
	UnifiedParserRULE_implMember        = 24
	UnifiedParserRULE_actorDecl         = 25
	UnifiedParserRULE_actorMember       = 26
	UnifiedParserRULE_typeAlias         = 27
	UnifiedParserRULE_constantDecl      = 28
	UnifiedParserRULE_type              = 29
	UnifiedParserRULE_typeList          = 30
	UnifiedParserRULE_statement         = 31
	UnifiedParserRULE_letStatement      = 32
	UnifiedParserRULE_varStatement      = 33
	UnifiedParserRULE_regionStatement   = 34
	UnifiedParserRULE_exprStatement     = 35
	UnifiedParserRULE_returnStatement   = 36
	UnifiedParserRULE_ifStatement       = 37
	UnifiedParserRULE_loopStatement     = 38
	UnifiedParserRULE_whileStatement    = 39
	UnifiedParserRULE_forStatement      = 40
	UnifiedParserRULE_switchStatement   = 41
	UnifiedParserRULE_caseClause        = 42
	UnifiedParserRULE_breakStatement    = 43
	UnifiedParserRULE_continueStatement = 44
	UnifiedParserRULE_blockStatement    = 45
	UnifiedParserRULE_tryStatement      = 46
	UnifiedParserRULE_pattern           = 47
	UnifiedParserRULE_patternList       = 48
	UnifiedParserRULE_fieldPattern      = 49
	UnifiedParserRULE_fieldPatternList  = 50
	UnifiedParserRULE_expr              = 51
	UnifiedParserRULE_caseExpr          = 52
	UnifiedParserRULE_primary           = 53
	UnifiedParserRULE_lambdaExpr        = 54
	UnifiedParserRULE_asyncExpr         = 55
	UnifiedParserRULE_structExpr        = 56
	UnifiedParserRULE_fieldInitList     = 57
	UnifiedParserRULE_fieldInit         = 58
	UnifiedParserRULE_listExpr          = 59
	UnifiedParserRULE_mapExpr           = 60
	UnifiedParserRULE_keyValue          = 61
	UnifiedParserRULE_setExpr           = 62
	UnifiedParserRULE_tupleExpr         = 63
	UnifiedParserRULE_block             = 64
	UnifiedParserRULE_argList           = 65
	UnifiedParserRULE_literal           = 66
	UnifiedParserRULE_identifier        = 67
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllItem() []IItemContext
	Item(i int) IItemContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UnifiedParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UnifiedParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UnifiedParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllItem() []IItemContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IItemContext); ok {
			len++
		}
	}

	tst := make([]IItemContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IItemContext); ok {
			tst[i] = t.(IItemContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Item(i int) IItemContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IItemContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IItemContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UnifiedParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UnifiedParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UnifiedParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UnifiedParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, UnifiedParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(139)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64((_la-51)) & ^0x3f) == 0 && ((int64(1)<<(_la-51))&35835) != 0 {
		{
			p.SetState(136)
			p.Item()
		}

		p.SetState(141)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IItemContext is an interface to support dynamic dispatch.
type IItemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ModuleDecl() IModuleDeclContext
	FunctionDecl() IFunctionDeclContext
	StructDecl() IStructDeclContext
	EnumDecl() IEnumDeclContext
	InterfaceDecl() IInterfaceDeclContext
	ImplDecl() IImplDeclContext
	ActorDecl() IActorDeclContext
	TypeAlias() ITypeAliasContext
	ImportDecl() IImportDeclContext
	ConstantDecl() IConstantDeclContext

	// IsItemContext differentiates from other interfaces.
	IsItemContext()
}

type ItemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyItemContext() *ItemContext {
	var p = new(ItemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UnifiedParserRULE_item
	return p
}

func InitEmptyItemContext(p *ItemContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UnifiedParserRULE_item
}

func (*ItemContext) IsItemContext() {}

func NewItemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ItemContext {
	var p = new(ItemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UnifiedParserRULE_item

	return p
}

func (s *ItemContext) GetParser() antlr.Parser { return s.parser }

func (s *ItemContext) ModuleDecl() IModuleDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModuleDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModuleDeclContext)
}

func (s *ItemContext) FunctionDecl() IFunctionDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclContext)
}

func (s *ItemContext) StructDecl() IStructDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStructDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStructDeclContext)
}

func (s *ItemContext) EnumDecl() IEnumDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumDeclContext)
}

func (s *ItemContext) InterfaceDecl() IInterfaceDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInterfaceDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInterfaceDeclContext)
}

func (s *ItemContext) ImplDecl() IImplDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImplDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImplDeclContext)
}

func (s *ItemContext) ActorDecl() IActorDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IActorDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IActorDeclContext)
}

func (s *ItemContext) TypeAlias() ITypeAliasContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeAliasContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeAliasContext)
}

func (s *ItemContext) ImportDecl() IImportDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportDeclContext)
}

func (s *ItemContext) ConstantDecl() IConstantDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantDeclContext)
}

func (s *ItemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ItemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ItemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UnifiedParserListener); ok {
		listenerT.EnterItem(s)
	}
}

func (s *ItemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(UnifiedParserListener); ok {
		listenerT.ExitItem(s)
	}
}

func (s *ItemContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case UnifiedParserVisitor:
		return t.VisitItem(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *UnifiedParser) Item() (localctx IItemContext) {
	localctx = NewItemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, UnifiedParserRULE_item)
	p.SetState(152)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(142)
			p.ModuleDecl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(143)
			p.FunctionDecl()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(144)
			p.StructDecl()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(145)
			p.EnumDecl()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(146)
			p.InterfaceDecl()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(147)
			p.ImplDecl()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(148)
			p.ActorDecl()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(149)
			p.TypeAlias()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(150)
			p.ImportDecl()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(151)
			p.ConstantDecl()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModuleDeclContext is an interface to support dynamic dispatch.
type IModuleDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
